[build-system]
requires = ["setuptools >= 61.0",  "wheel", "setuptools-git-versioning>=2.0,<3", ]
build-backend = "setuptools.build_meta"

[project]
name = "navground_learning"
dependencies = [
  "gymnasium==0.29.1",
  "stable-baselines3==2.3.2",
  "pettingzoo==1.24.3",
  "SuperSuit==3.9.3",
  "navground==0.3.0"
]

requires-python = ">=3.10"
authors = [
  {name = "Jerome Guzzi", email = "jerome@idsia.ch"},
]
maintainers = [
  {name = "Jerome Guzzi", email = "jerome@idsia.ch"}
]
description = "A Python package that interfaces navground with gymnasium to learn navigating using IL and RL."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [""]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dynamic = ["version"]

[project.optional-dependencies]
all = [
  'navground[all]'
]

[project.urls]
Homepage = "https://github.com/idsia-robotics/navground_learning"
Documentation = "https://idsia-robotics.github.io/navground_learning"
Repository = "https://github.com/idsia-robotics/navground_learning.git"
"Bug Tracker" = "https://github.com/idsia-robotics/navground_learning/issues"
Changelog = "https://github.com/idsia-robotics/navground_learning/blob/main/CHANGELOG.md"

[project.scripts]

[tool.setuptools.packages.find]
where = ["."]

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools-git-versioning]
enabled = true
# dirty_template = "{tag}-{ccount}+{branch}"

[project.entry-points.navground_behaviors]
policy = "navground_learning.behaviors.policy:PolicyBehavior"
[project.entry-points.navground_scenarios]
forward = "navground_learning.scenarios.forward:ForwardScenario"
corridor_with_obstacle = "navground_learning.scenarios.corridor_with_obstacle:CorridorWithObstacle"


