[build-system]
requires = ["setuptools >= 61.0",  "wheel", "setuptools-git-versioning>=2.0,<3", ]
build-backend = "setuptools.build_meta"

[project]
name = "navground_learning"
dependencies = [
  "gymnasium>=1.0.0",
  "navground>=0.3.2",
  "pettingzoo>=1.24.3",
]

requires-python = ">=3.10"
authors = [
  {name = "Jerome Guzzi", email = "jerome@idsia.ch"},
]
maintainers = [
  {name = "Jerome Guzzi", email = "jerome@idsia.ch"}
]
description = "A Python package that interfaces navground with gymnasium to learn navigating using IL and RL."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["navigation", "navground", "gymnasium", "pettingzoo", 
            "imitation-learning", "reinforcement-learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed"
]
dynamic = ["version"]

[project.optional-dependencies]
rl = [
  "stable-baselines3>=2.4.0",
  "SuperSuit>=3.9.3",
]
il = [
  "imitation>=1.0.0",
  "SuperSuit>=3.9.3",
]
inference = [
  'onnxruntime>=1.20.0',
  'onnx'
]
all = [
  "navground[all]",
  "pettingzoo>=1.24.3",
  "SuperSuit>=3.9.3",
  "stable-baselines3>=2.4.0",
  "imitation>=1.0.0",
  "onnxruntime",
  "torch>=2.4",
  "onnx",
  "tqdm"
]
[project.urls]
Homepage = "https://github.com/idsia-robotics/navground_learning"
Documentation = "https://idsia-robotics.github.io/navground_learning"
Repository = "https://github.com/idsia-robotics/navground_learning.git"
"Bug Tracker" = "https://github.com/idsia-robotics/navground_learning/issues"
Changelog = "https://github.com/idsia-robotics/navground_learning/blob/main/CHANGELOG.md"

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools-git-versioning]
enabled = true
starting_version = "0.1.1"
# dirty_template = "{tag}-{ccount}+{branch}"

[project.entry-points.navground_behaviors]
policy = "navground.learning.behaviors.policy:PolicyBehavior"
[project.entry-points.navground_scenarios]
forward = "navground.learning.scenarios.forward:ForwardScenario"
corridor_with_obstacle = "navground.learning.scenarios.corridor_with_obstacle:CorridorWithObstacle"

[tool.mypy]
implicit_reexport = true
ignore_missing_imports = true
