[develop]
script_dir=$base/lib/navground_learning
[install]
install_scripts=$base/lib/navground_learning
[options.entry_points]
navground_behaviors = 
    policy = navground_learning.behaviors.policy:PolicyBehavior
# navground_tasks = 
#     waypoints_with_planner = navground_rexasipro.waypoints_with_planner_task:WaypointsWithPlannerTask
navground_scenarios = 
    forward = navground_learning.scenarios.forward:ForwardScenario
    corridor_with_obstacle = navground_learning.scenarios.corridor_with_obstacle:CorridorWithObstacle

