[develop]
script_dir=$base/lib/navground_learning
[install]
install_scripts=$base/lib/navground_learning
[options.entry_points]
navground_behaviors = 
    policy = navground.learning.behaviors.policy:PolicyBehavior
navground_scenarios = 
    forward = navground.learning.scenarios.forward:ForwardScenario
    corridor_with_obstacle = navground.learning.scenarios.corridor_with_obstacle:CorridorWithObstacle

